--- a/MVCMain/MVCMain/Views/Home/Index.cshtml
+++ b/MVCMain/MVCMain/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using MVCMain.Application.ExtensionMethods
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -28,4 +29,11 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+    <div class="col-md-4">
+        @Html.LanguageString("topic")
+    </div>
 </div>
+
+@* ### Remove ME - Not needed, just for our forum ### *@
+@Html.Partial("_DocumentationBlock")
+@* ### Remove ME - Not needed, just for our forum ### *@
